<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:letterSpacing="0.2"
        android:text="@string/appName"
        android:textColor="@color/white"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_LogIn"
                android:layout_width="@dimen/width_btn"
                android:layout_height="wrap_content"
                android:text="@string/txt_iniciarSesion"
                android:layout_margin="10dp"
                android:onClick="onClickBtn" />

            <Button
                android:id="@+id/btn_Registr"
                android:layout_width="@dimen/width_btn"
                android:layout_height="wrap_content"
                android:text="@string/txt_registrarse"
                android:layout_margin="10dp"
                android:onClick="onClickBtn"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_Exit"
            android:layout_width="@dimen/width_btn"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/txt_salir"
            android:onClick="onClickBtn"/>
    </LinearLayout>
</LinearLayout>